# object_programming

./: CMakeLists.txt  README.md  clients - Copy.txt  clients.h  clients.txt  main.cpp  movies - Copy (2).txt  movies - Copy.txt  movies.h  movies.txt  projekt.txt  projekt_prog.cpp  settings.h  shared.h  users.txt
clients/: clients.h
data/: clients.txt  movies.txt
html/: annotated.html  annotated_dup.js  classclients_class_1_1client-members.html  classclients_class_1_1client.html  classes.html  classmovies_class_1_1movie-members.html  classmovies_class_1_1movie.html  clients_8h_source.html  doxygen_crawl.html  files.html  files_dup.js  index.html  md__r_e_a_d_m_e.html  movies_8h_source.html  navtreedata.js  navtreeindex0.js  pages.html  settings_8h_source.html  shared_8h_source.html
html/search/: all_1.js  classes_0.js  pages_0.js  searchdata.js
latex/: annotated.tex  classclients_class_1_1client.tex  classmovies_class_1_1movie.tex  clients_8h_source.tex  files.tex  md__r_e_a_d_m_e.tex  movies_8h_source.tex  refman.tex  settings_8h_source.tex  shared_8h_source.tex
movies/: movies.h
tests/: CMakeLists.txt  test_client.cpp
